--- a/src/station1.html
+++ b/src/station1.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <img src="assets/image/railway-thumbnail.png">
+    <img src="./assets/image/railway-thumbnail.png">
     <p>TechTrainの</p>
     <p>使い方</p>
     <span>hogehoge</span>
