--- a/src/station6.html
+++ b/src/station6.html
@@ -1,1 +1,37 @@
 <!DOCTYPE html>
+<html lang="ja">
+
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <html lang="ja" prefix="og: http://ogp.me/ns#">
+    <meta property="og:title" content="rail6">
+    <meta property="og:type" content="website">
+    <meta property="og:description" content="test">
+    <meta property="og:url" content="http://localhost:5500">
+    <meta property="og:site_name" content="rail6">
+    <meta property="og:image" content="./assets/image/railway-thumbnail.png">
+    <meta name="twitter:card" content="summary_large_image">
+
+    <link rel=" stylesheet" href="./assets/css/station6.css" type="text/css">
+    <title>Station 6</title>
+
+</head>
+
+<header>
+</header>
+
+<body>
+    <div class="card">
+        <img src="./assets/image/railway-thumbnail.png" alt="電車の写真" class="card__img-top" />
+        <p class="card__title">タイトル</p>
+        <p class="card__description">Joseph Solomon</p>
+        <p class="card__description">420 mil visualizações • há 1 ano</p>
+    </div>
+</body>
+<footer>
+    <br>
+</footer>
+
+</html>
