--- a/src/station6.html
+++ b/src/station6.html
@@ -13,8 +13,8 @@
     <meta property="og:site_name" content="rail6">
     <meta property="og:image" content="./assets/image/railway-thumbnail.png">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site">
-    <meta name="twitter:creator">
+    <meta name="twitter:site" content="@mikan_54951" />
+    <meta name="twitter:creator" content="@mikan_54951" />
     <link rel=" stylesheet" href="./assets/css/station6.css" type="text/css">
     <title>Station 6</title>
 
